# metricizer

./: .gitignore  Cargo.toml  LICENSE  README.md  memory.x
src/: app.rs  display.rs  keypad.rs  main.rs  metricizer.code-workspace  metricizer.rs
